force-app/main/default/objects/Section_Field__c/Section_Field__c.object-meta.xml
<CustomObject>
    <label>Section Field</label>
    <nameField>
        <displayFormat>SF-{0000}</displayFormat>
        <label>Section Field Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>