force-app/main/default/objects/Section_Field__c/fields/Field_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Field_ApiName__c</fullName>
    <label>Field ApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>