force-app/main/default/objects/Section_Field__c/fields/Field_Notes__c.field-meta.xml
<CustomField>
    <fullName>Field_Notes__c</fullName>
    <label>Field Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>