force-app/main/default/objects/Section_Field__c/fields/Form_Setting_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Setting_Section__c</fullName>
    <label>Form Setting Section</label>
    <referenceTo>Form_Setting_Section__c</referenceTo>
    <relationshipLabel>Section Fields</relationshipLabel>
    <relationshipName>Section_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>