force-app/main/default/objects/Section_Field__c/fields/Has_notes__c.field-meta.xml
<CustomField>
    <fullName>Has_notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has notes</label>
    <type>Checkbox</type>
</CustomField>