force-app/main/default/objects/Section_Field__c/fields/Is_Hide__c.field-meta.xml
<CustomField>
    <fullName>Is_Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hide</label>
    <type>Checkbox</type>
</CustomField>