force-app/main/default/objects/Section_Field__c/fields/Object_ApiName__c.field-meta.xml
<CustomField>
    <fullName>Object_ApiName__c</fullName>
    <label>Object ApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>