force-app/main/default/objects/Section_Field__c/fields/Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Reference_Object__c</fullName>
    <label>Reference Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>