force-app/main/default/objects/Section_Field__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DECIMAL</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
            <value>
                <fullName>CHECKBOX</fullName>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
            </value>
            <value>
                <fullName>LISTBOX</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>NUMBER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>