force-app/main/default/objects/Section_Field__c/fields/Visibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Type__c</fullName>
    <label>Visibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>