force-app/main/default/objects/Section_Field__c/validationRules/Notes_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Has_notes__c = true,
    ISBLANK(Field_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Field_Notes__c</errorDisplayField>
    <errorMessage>If checkbox Has notes equal true, Field Notes should be filled!</errorMessage>
</ValidationRule>