force-app/main/default/objects/Section_Field__c/validationRules/Reference_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Reference&quot;),
    ISBLANK(Reference_Object__c)
)</errorConditionFormula>
    <errorDisplayField>Reference_Object__c</errorDisplayField>
    <errorMessage>Reference Object should be filled!</errorMessage>
</ValidationRule>