force-app/main/default/objects/Section_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_ApiName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>